--- a/app.yaml
+++ b/app.yaml
@@ -1,8 +1,9 @@
-application: arunjit-test
-version: blog-stage
+application: arunjit-goblog
+version: p20130703
 runtime: go
 api_version: go1
 
 handlers:
 - url: /.*
   script: _go_app
+  secure: always
